<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" 
    android:padding="20dip">
 
    <TextView
        android:id="@+id/textViewSendPushNote"
        android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_marginLeft="5dip"
 	    android:layout_marginTop="10dip"
 	    android:textSize="14sp"
 	    android:textStyle="bold"
 	    android:textColor="@color/Facebook"
 	    android:text="@string/pushNoteDescription"/>
 	    
 	<EditText
 	    android:id="@+id/editTextMessage"
 	    android:layout_below="@+id/textViewSendPushNote"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:hint="@string/pushNoteHint"
 	    android:layout_marginLeft="5dip"
 	    android:layout_marginTop="20dip"
 	    android:inputType="text" >
    </EditText>
    
    <Button 
        android:id="@+id/buttonSendPushNote"
        android:layout_below="@+id/editTextMessage"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="3dip"
        android:text="@string/sendPushNote"
        android:textColor="#FFFFFF"
        android:background="@color/Facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_marginTop="20dip"/>
 
 	<Button 
        android:id="@+id/buttonCancelPushNote"
        android:layout_below="@+id/editTextMessage"
        android:layout_alignParentRight="true"
        android:layout_marginRight="3dip"
        android:text="@string/cancelPushNote"
        android:textColor="#FFFFFF"
        android:background="@color/Facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_marginTop="20dip"/>

 
</RelativeLayout>