<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dip"
    android:layout_height="200dip"
    android:background="#FFFFFF" >

    <TextView
        android:id="@+id/pushNoteViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dip"
        android:textColor="@color/Facebook"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/pushNoteTitle" />
    
    <ScrollView
        android:id="@+id/pushNoteTextScrollView"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_below="@+id/pushNoteViewHeader"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="5dip">
        
        <TextView
        	android:id="@+id/pushNoteText"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="2dip"
        	android:textColor="@color/Facebook"
        	android:textSize="14sp"
        	android:text="@string/pushNoteText" />
    </ScrollView>

 	<Button 
        android:id="@+id/dismissPushNoteButton"
        android:layout_below="@+id/pushNoteTextScrollView"
        android:layout_centerHorizontal="true"
        android:text="@string/dismissPushNoteText"
        android:textColor="#FFFFFF"
        android:background="@color/Facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_marginTop="20dip"/>    

</RelativeLayout>
